# tglg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run-mypy
jupyter_notebooks/: extract_play_by_play_commentaries.ipynb  holo_assist_per_task_analysis.ipynb  soccernet_per_action_analysis.ipynb
lightning-ai-scripts/: real_time_model_eval.py  videollm_online_sweep.py
manually-labeed-data/SoccerNet/2016-09-24 - 19-30 Arsenal 3 - 0 Chelsea/: 1_asr.json
manually-labeled-data/SoccerNet/2015-02-21 - 18-00 Swansea 2 - 1 Manchester United/: 1_224p.json  2_224p_annotated.json
manually-labeled-data/SoccerNet/2016-03-05 - 18-00 Manchester City 4 - 0 Aston Villa/: 1_224p_annotated.json  2_224p.json
manually-labeled-data/SoccerNet/2016-09-24 - 19-30 Arsenal 3 - 0 Chelsea/: 1_224p_annotated.json  2_224p_annotated.json
manually-labeled-data/SoccerNet/2016-10-29 - 17-00 Tottenham 1 - 1 Leicester/: 1_224p_annotated.json  2_224p_annotated.json
manually-labeled-data/SoccerNet/2016-11-06 - 17-15 Liverpool 6 - 1 Watford/: 1_224p.json  2_224p.json
scripts/: calc_video_stats.py  combine_frame_files_into_one.py  eval.py  gen_anns_holo_assist.py  gen_anns_soccernet.py  holo_assist_per_task_analysis.py  holo_assist_trace_by_task_type.py  pbp_classifier.py  re-encode-h264.sh  run_inference.py  soccernet_annotate_pbp.py  soccernet_per_action_analysis.py  soccernet_trace_by_action.py  soccernet_transcribe.py  train_videollm_online_ego4d_goalstep.py  train_videollm_online_soccernet.py  videollm_online_encode_frames.py
slurm-scripts/: submit_run_inference.py  submit_train_videollm_online_ego4d_goalstep.py
src/real_time_vlm_benchmark/baseline_models/: __init__.py
src/real_time_vlm_benchmark/baseline_models/utils/: generation.py  sample.py  train.py
src/real_time_vlm_benchmark/baseline_models/videollm_online_models/: __init__.py  holo_assist.py  soccernet.py  videollm_online.py
src/real_time_vlm_benchmark/datasets/: __init__.py  ego4d.py  holo_assist.py  real_time.py  utils.py
src/real_time_vlm_benchmark/datasets/soccernet/: __init__.py  dataset.py  pbp_model.py  utils.py
src/real_time_vlm_benchmark/eval/: real_time_gen_eval.py
tests/baseline_models/utils/: test_generation.py  test_sample.py  test_train.py
tests/baseline_models/videollm_online_models/: test_holo_assist.py  test_videollm_online.py
tests/datasets/: test_ego4d.py  test_holo_assist.py  test_utils.py
tests/datasets/soccernet/: test_dataset.py  test_pbp_model.py  test_utils.py
