[project]
name = "real-time-vlm-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["whisperx>=3.3.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

override-dependencies = [
    # To get around https://github.com/m-bain/whisperX/issues/967
    "ctranslate2>=4.5.0",
]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
# automatically sort imports
lint.select = ["I"]

[tool.ruff.lint.isort]
# wandb by default creates a directory called "wandb"
# which confuses isort, causing it to classify wandb
# as a first-party library.
known-third-party = ["wandb"]
