[project]
name = "real-time-vlm-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "decord>=0.6.0",
    "einops>=0.8.1",
    "jsonargparse[signatures]>=4.37.0",
    "lightning>=2.5.0.post0",
    "lightning-sdk>=0.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sentence-transformers>=3.4.1",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "videollm-online",
    "wandb>=0.19.7",
    "whisperx>=3.3.1",
    "xgboost>=2.1.4",
]

[project.optional-dependencies]
flash-attn = ["flash-attn>=2.7.4.post1"]
jupyter = ["jupyterlab>=4.3.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

no-build-isolation-package = ["flash-attn"]
override-dependencies = [
    # To get around https://github.com/m-bain/whisperX/issues/967
    "ctranslate2>=4.5.0",
]

[tool.uv.sources]
videollm-online = { git = "https://github.com/yukw777/videollm-online.git", rev = "3be744ee9bda681a81c443dd7436c2f2826d0c78" }

[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.mypy]
ignore_missing_imports = true
exclude = ['\.venv', 'venv']

[tool.ruff]
# automatically sort imports
lint.extend-select = ["I"]

[tool.ruff.lint.isort]
# wandb by default creates a directory called "wandb"
# which confuses isort, causing it to classify wandb
# as a first-party library.
known-third-party = ["wandb"]
